deployments/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cp-metrics-app
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cp-metrics-app
  template:
    metadata:
      labels:
        app: cp-metrics-app
    spec:
      containers:
        - name: cp-metrics-app
          image: ${REGISTRY}/${REPOSITORY}:${IMAGE_TAG}
          ports:
            - containerPort: 8080
