deployments/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cp-metrics-app
  namespace: ${NAMESPACE}
  labels:
    app: cp-metrics-app
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: cp-metrics-app
