deployments/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cp-metrics-app
  namespace: ${NAMESPACE}
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: cp-metrics-app-${NAMESPACE}-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/server-snippet: location = /metrics { deny all; }
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecDefaultAction "phase:2,pass,log,tag:github_team=webops"
      SecDefaultAction "phase:4,pass,log,tag:github_team=webops"
spec:
  ingressClassName: modsec
  tls:
    - hosts:
        - cloud-platform-metrics.apps.live.cloud-platform.service.justice.gov.uk
  rules:
    - host: cloud-platform-metrics.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: cp-metrics-app
                port:
                  number: 8080
